@@ -8,6 +8,9 @@ Changes - Apache::Test change logfile
 
 =item 1.10-dev
 
+Since some of the inherited from the global httpd.conf modules require
+mod_perl to be loaded first, orrange for that to happen. [Stas]
+
 Don't try to set ulimit unlimited for coredumps on Solaris, unless run
 as root [Rob Kinyon <Rob.Kinyon@progressive-medical.com>]
 
